# synergy-core

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  COMPILE  COMPILE.md  README  README.md  configure  hm.py  notes.txt  package_deb.sh
ext/toolchain/: commands1.py  generators.py  hm.cmd  hm.sh
res/: config.h.in  synergy.desktop  synergy.spec.in  synopenssl.cnf
src/: CMakeLists.txt
src/cmd/: CMakeLists.txt
src/cmd/synergyc/: CMakeLists.txt  MSWindowsClientTaskBarReceiver.h
src/cmd/synergyd/: CMakeLists.txt  synergyd.cpp
src/cmd/synergyp/: CMakeLists.txt  MSWindowsPortableTaskBarReceiver.h  synergyp.cpp
src/cmd/synergys/: CMakeLists.txt  MSWindowsServerTaskBarReceiver.h
src/cmd/syntool/: CMakeLists.txt
src/cmd/synwinad/: CMakeLists.txt  synwinad.cpp
src/cmd/usynergy/: uSynergyWin32.c
src/gui/: CMakeLists.txt  gui.pro  gui.ts
src/gui/res/: MainWindowBase.ui
src/gui/res/lang/: gui_af-ZA.ts  gui_ar.qm  gui_ar.ts  gui_bg-BG.qm  gui_bg-BG.ts  gui_ca-AD.qm  gui_ca-AD.ts  gui_cs-CZ.qm  gui_cs-CZ.ts  gui_cy.qm  gui_cy.ts  gui_da.qm  gui_da.ts  gui_de.qm  gui_de.ts  gui_es.qm  gui_es.ts  gui_et-EE.qm  gui_et-EE.ts  gui_fi.qm  gui_fi.ts  gui_fr.qm  gui_fr.ts  gui_gl.qm  gui_gl.ts  gui_grk.ts  gui_he.qm  gui_he.ts  gui_hi.ts  gui_hr-HR.qm  gui_hr-HR.ts  gui_hu-HU.qm  gui_hu-HU.ts  gui_id.ts  gui_is-IS.ts  gui_it.qm  gui_it.ts  gui_ja-JP.qm  gui_ja-JP.ts  gui_ko.qm  (+41 more)
src/gui/res/mac/: Info.plist
src/gui/src/: AboutDialog.cpp  AboutDialog.h  AboutDialogBase.ui  AppConfig.cpp  AppConfig.h  BaseConfig.cpp  BaseConfig.h  BonjourWindows.cpp  CoreInterface.cpp  CoreInterface.h  Fingerprint.cpp  IpcClient.cpp  IpcReader.cpp  MainWindow.cpp  MainWindow.h  MainWindowBase.ui  QUtility.cpp  ScreenSettingsDialog.cpp  ScreenSettingsDialogBase.ui  ScreenSetupView.cpp  ScreenSetupView.h  ServerConfig.cpp  ServerConfig.h  ServerConfigDialog.cpp  ServerConfigDialog.h  ServerConfigDialogBase.ui  SettingsDialog.cpp  SettingsDialog.h  SettingsDialogBase.ui  SetupWizard.cpp  SslCertificate.cpp  SslCertificate.h  VersionChecker.cpp  ZeroconfRegister.cpp  configDirectory.cpp  configDirectory.h  main.cpp
src/lib/: CMakeLists.txt
src/lib/arch/: Arch.h  CMakeLists.txt  IArchFile.cpp  IArchFile.h  IArchNetwork.h  IArchString.cpp  IArchString.h  IArchSystem.h  XArch.h  multibyte.h
src/lib/arch/unix/: ArchDaemonUnix.h  ArchFileUnix.cpp  ArchFileUnix.h  ArchInternetUnix.cpp  ArchMultithreadPosix.cpp  ArchMultithreadPosix.h  ArchNetworkBSD.cpp  ArchNetworkBSD.h  ArchSystemUnix.cpp  ArchSystemUnix.h
src/lib/arch/win32/: ArchDaemonWindows.cpp  ArchDaemonWindows.h  ArchFileWindows.cpp  ArchFileWindows.h  ArchInternetWindows.cpp  ArchLogWindows.h  ArchMiscWindows.cpp  ArchMiscWindows.h  ArchMultithreadWindows.h  ArchNetworkWinsock.cpp  ArchNetworkWinsock.h  ArchStringWindows.cpp  ArchSystemWindows.cpp  ArchSystemWindows.h  ArchTaskBarWindows.cpp  ArchTaskBarWindows.h  ArchTimeWindows.cpp  XArchWindows.cpp  XArchWindows.h
src/lib/base/: CMakeLists.txt  Event.h  EventQueue.h  IEventQueueBuffer.h  Log.cpp  Log.h  PriorityQueue.h  SimpleEventQueueBuffer.cpp  SimpleEventQueueBuffer.h  String.cpp  String.h  Unicode.h  log_outputters.h
src/lib/client/: CMakeLists.txt  Client.cpp
src/lib/common/: CMakeLists.txt  basic_types.h  common.h  stdexcept.h
src/lib/io/: CMakeLists.txt  StreamBuffer.h
src/lib/ipc/: CMakeLists.txt  Ipc.h  IpcClient.cpp  IpcLogOutputter.cpp  IpcLogOutputter.h  IpcServer.cpp
src/lib/mt/: CMakeLists.txt  CondVar.h
src/lib/net/: CMakeLists.txt  ISocketFactory.h  NetworkAddress.cpp  SecureListenSocket.cpp  SecureListenSocket.h  SecureSocket.cpp  SecureSocket.h  SocketMultiplexer.cpp  SocketMultiplexer.h  TCPListenSocket.cpp  TCPListenSocket.h  TCPSocket.cpp  TCPSocket.h  TCPSocketFactory.cpp  TCPSocketFactory.h  XSocket.cpp  XSocket.h
src/lib/platform/: CMakeLists.txt  IMSWindowsClipboardFacade.h  MSWindowsClipboard.cpp  MSWindowsClipboard.h  MSWindowsClipboardBitmapConverter.cpp  MSWindowsDebugOutputter.cpp  MSWindowsDesks.cpp  MSWindowsDesks.h  MSWindowsDropTarget.cpp  MSWindowsDropTarget.h  MSWindowsEventQueueBuffer.h  MSWindowsHook.cpp  MSWindowsHook.h  MSWindowsKeyState.cpp  MSWindowsKeyState.h  MSWindowsScreen.cpp  MSWindowsScreen.h  MSWindowsScreenSaver.cpp  MSWindowsScreenSaver.h  MSWindowsSession.cpp  MSWindowsSession.h  MSWindowsUtil.cpp  MSWindowsUtil.h  MSWindowsWatchdog.cpp  MSWindowsWatchdog.h  OSXKeyState.h  OSXScreen.h  OSXScreen.mm  XWindowsClipboard.cpp  XWindowsClipboard.h  XWindowsEventQueueBuffer.h  XWindowsKeyState.cpp  XWindowsKeyState.h  XWindowsScreen.cpp  XWindowsScreen.h  XWindowsScreenSaver.h  XWindowsUtil.cpp  XWindowsUtil.h  synwinhk.h
src/lib/server/: CMakeLists.txt  ClientListener.cpp  ClientListener.h  ClientProxy1_5.h  Config.cpp  Config.h  InputFilter.h  Server.cpp  Server.h
src/lib/synergy/: App.cpp  ArgParser.cpp  ArgParser.h  ArgsBase.cpp  ArgsBase.h  CMakeLists.txt  Chunk.cpp  Chunk.h  ClientApp.cpp  ClientTaskBarReceiver.cpp  ClipboardChunk.h  DaemonApp.cpp  DragInformation.h  FileChunk.h  IClipboard.cpp  IKeyState.h  KeyMap.h  KeyState.cpp  KeyState.h  PlatformScreen.h  PortableTaskBarReceiver.cpp  PortableTaskBarReceiver.h  ProtocolUtil.cpp  Screen.cpp  ServerApp.cpp  ServerApp.h  ServerArgs.cpp  ServerTaskBarReceiver.cpp  ServerTaskBarReceiver.h  StreamChunker.cpp  ToolApp.cpp  ToolApp.h  ToolArgs.cpp  ToolArgs.h  clipboard_types.h  key_types.h  mouse_types.h  option_types.h
src/lib/synergy/win32/: AppUtilWindows.cpp  AppUtilWindows.h
src/lib/synwinhk/: CMakeLists.txt  synwinhk.cpp  synwinhk.h
src/micro/: CMakeLists.txt  uSynergy.h
src/setup/win32/: Include.wxi  Product.wxs  synergy.sln  synergy.wixproj
src/test/: CMakeLists.txt
src/test/integtests/: CMakeLists.txt  Main.cpp
src/test/integtests/arch/: ArchInternetTests.cpp
src/test/integtests/ipc/: IpcTests.cpp
src/test/integtests/net/: NetworkTests.cpp
src/test/integtests/platform/: MSWindowsClipboardTests.cpp  MSWindowsKeyStateTests.cpp  OSXClipboardTests.cpp  OSXKeyStateTests.cpp  (+5 more)
src/test/unittests/: CMakeLists.txt  Main.cpp
(+24 files in other folders)
